--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -17,10 +17,9 @@ body {
   z-index: 100;
   display: none;
   width: 350px;
-  right: 15px;
-  height: 530px;
-  bottom: 7vw;
-  right: 8vw;
+  height: 580px;
+  bottom: 2vw;
+  right: 7vw;
   position: fixed;
   background: #fff;
   border-radius: 10px 10px 10px 10px;
@@ -54,7 +53,7 @@ body {
 }
 .chats {
   /* display: none; */
-  height: 390px;
+  height: 440px;
   padding: 2px;
   border-radius: 1px;
   overflow-y: scroll;
@@ -259,6 +258,18 @@ textarea::placeholder{
   color: #060dcfc7;
 }
 
+
+/* chat opening icon/bot icon */
+.profile_div {
+  /* display: none; */
+  position: fixed;
+  padding: 5px;
+  width: 7%;
+  bottom: 7px;
+  right: 0;
+  cursor: pointer;
+  z-index: 100000;
+}
 .imgProfile {
   box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.16), 0 0px 10px 0 #00000096;
   border-radius: 50px;
@@ -266,15 +277,81 @@ textarea::placeholder{
 
 }
 
-.profile_div {
-  /* display: none; */
-  position: fixed;
-  padding: 5px;
-  width: 10%;
-  bottom: 20px;
-  right: 0;
+/* Bot pop-up intro */
+
+.show-prompt {
+  visibility: hidden;
+  opacity: 0;
+  color: #fff;
+  background: #060dcfee;
   cursor: pointer;
-  z-index: 100000;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  transition: visibility 0.5s, opacity 0.3s linear;
+}
+.show-prompt:hover{
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.5s, opacity 0.3s linear;
+}
+.show-prompt-content{
+  margin-top: 28%;
+  margin-left: 30%;
+}
+.show-prompt > .profile-white-bg{
+  position: fixed;
+  background: #fff;
+  right: -10px;
+  bottom: -10px;
+  background: #fff;
+  cursor: pointer;
+  animation-name: white_bg_animate;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+/* The animation code */
+@keyframes white_bg_animate {
+  0% {
+    transform: scale(1.2,1.2);
+  }
+  50% {
+    transform: scale(1,1);
+  }
+  100% {
+    transform: scale(1.2,1.2);
+  }
+}
+/* Use a media query to add a breakpoint at 800px: */
+@media screen and (min-width: 1000px) {
+  .show-prompt{
+    width: 350px;
+    height: 350px;
+    border-top-left-radius: 350px;
+  }
+  .show-prompt > .profile-white-bg{
+    height: 150px;
+    width: 150px;
+    border-top-left-radius: 140px;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 1000px){
+  .show-prompt{
+    width: 300px;
+    height: 300px;
+    border-top-left-radius: 300px;
+  }
+  .show-prompt > .profile-white-bg{
+    height: 100px;
+    width: 100px;
+    border-top-left-radius: 100px;
+  }
+}
+div .open{
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.5s, opacity 0.3s linear;
 }
 
 /* css for dropdown menu of the bot */
@@ -491,88 +568,6 @@ input:focus {
 }
 
 
-/* Bot pop-up intro */
-
-.show-prompt {
-  visibility: hidden;
-  opacity: 0;
-  color: #fff;
-  background: #060dcfc7;
-  cursor: pointer;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  width: 300px;
-  height: 300px;
-  border-top-left-radius: 300px;
-  padding: 20px;
-  transition: visibility 0.5s, opacity 0.3s linear;
-}
-.show-prompt:hover{
-  visibility: visible;
-  opacity: 1;
-  transition: visibility 0.5s, opacity 0.3s linear;
-}
-.show-prompt-content{
-  margin-top: 28%;
-  margin-left: 30%;
-}
-.show-prompt > .profile-white-bg{
-  position: fixed;
-  background: #fff;
-  right: -20px;
-  bottom: -20px;
-  background: #fff;
-  height: 120px;
-  width: 120px;
-  border-top-left-radius: 120px;
-  cursor: pointer;
-  animation-name: white_bg_animate;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-}
-/* The animation code */
-@keyframes white_bg_animate {
-  0% {
-    transform: scale(1.2,1.2);
-  }
-  50% {
-    transform: scale(1,1);
-  }
-  100% {
-    transform: scale(1.2,1.2);
-  }
-}
-/* Use a media query to add a breakpoint at 800px: */
-@media screen and (min-width: 1000px) {
-  .show-prompt{
-    width: 500px;
-    height: 500px;
-    border-top-left-radius: 500px;
-  }
-  .show-prompt > .profile-white-bg{
-    height: 240px;
-    width: 240px;
-    border-top-left-radius: 220px;
-  }
-}
-@media screen and (min-width: 600px) and (max-width: 1000px){
-  .show-prompt{
-    width: 400px;
-    height: 400px;
-    border-top-left-radius: 400px;
-  }
-  .show-prompt > .profile-white-bg{
-    height: 170px;
-    width: 170px;
-    border-top-left-radius: 170px;
-  }
-}
-div .open{
-  visibility: visible;
-  opacity: 1;
-  transition: visibility 0.5s, opacity 0.3s linear;
-}
 
 /* Form styling */
 
